@@ -1,6 +1,8 @@
 package sir_draco.survivalskills.SkillListeners;
 
+import org.bukkit.ChatColor;
 import org.bukkit.Location;
+import org.bukkit.Sound;
 import org.bukkit.World;
 import org.bukkit.entity.EntityType;
 import org.bukkit.entity.Player;
@@ -8,40 +10,42 @@ import org.bukkit.event.EventHandler;
 import org.bukkit.event.Listener;
 import org.bukkit.event.entity.EntityDamageEvent;
 import org.bukkit.event.player.PlayerInteractEvent;
+import org.bukkit.event.player.PlayerItemHeldEvent;
 import org.bukkit.event.player.PlayerMoveEvent;
 import org.bukkit.event.vehicle.VehicleMoveEvent;
 import org.bukkit.inventory.EquipmentSlot;
+import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.PlayerInventory;
 import org.bukkit.potion.PotionEffect;
 import org.bukkit.potion.PotionEffectType;
 import org.bukkit.util.Vector;
 import sir_draco.survivalskills.Abilities.CaveFinderAsync;
-import sir_draco.survivalskills.ItemStackGenerator;
+import sir_draco.survivalskills.Abilities.Magnet;
+import sir_draco.survivalskills.Skills.SkillManager;
+import sir_draco.survivalskills.Utils.ItemStackGenerator;
 import sir_draco.survivalskills.Rewards.PlayerRewards;
-import sir_draco.survivalskills.Skill;
 import sir_draco.survivalskills.SurvivalSkills;
 
+import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.UUID;
 
 public class ExploringSkill implements Listener {
+    public static final ArrayList<Player> activeMagnets = new ArrayList<>();
 
     private final SurvivalSkills plugin;
     private final HashMap<UUID, Location> locationTracker = new HashMap<>();
     private final HashMap<UUID, Integer> stepCounter = new HashMap<>();
 
-    private double xp; // XP per block travelled
-
-    public ExploringSkill(SurvivalSkills plugin, double xp) {
+    public ExploringSkill(SurvivalSkills plugin) {
         this.plugin = plugin;
-        this.xp = xp;
     }
 
     @EventHandler
     public void vehicleMoveEvent(VehicleMoveEvent e) {
         if (e.getVehicle().getPassengers().isEmpty()) return;
-        if (e.getVehicle().getPassengers().get(0).getType() != EntityType.PLAYER) return;
-        Player p = (Player) e.getVehicle().getPassengers().get(0);
+        if (e.getVehicle().getPassengers().getFirst().getType() != EntityType.PLAYER) return;
+        Player p = (Player) e.getVehicle().getPassengers().getFirst();
         UUID uuid = p.getUniqueId();
         Location loc = p.getLocation().getBlock().getLocation();
         if (!locationTracker.containsKey(uuid)) locationTracker.put(uuid, loc);
@@ -68,7 +72,7 @@ public class ExploringSkill implements Listener {
         }
         else stepCounter.put(p.getUniqueId(), steps - 100);
 
-        Skill.experienceEvent(plugin, p, xp * 100, "Exploring");
+        SkillManager.experienceEvent(plugin, p, plugin.getSkillManager().getExploringXP() * 100, "Exploring");
         stepCounter.put(uuid, 0);
     }
 
@@ -101,35 +105,30 @@ public class ExploringSkill implements Listener {
         }
         else stepCounter.put(p.getUniqueId(), steps - 100);
 
-        Skill.experienceEvent(plugin, p, xp * 100, "Exploring");
+        SkillManager.experienceEvent(plugin, p, plugin.getSkillManager().getExploringXP() * 100, "Exploring");
         stepCounter.put(uuid, 0);
     }
 
     @EventHandler
     public void exploringSkill(PlayerMoveEvent e) {
         Player p = e.getPlayer();
-        PlayerRewards rewards = plugin.getPlayerRewards(p);
-        if (rewards == null) return;
-
         if (p.isSwimming()) setSwimSpeed(p);
-        checkJumpBoots(p, rewards);
-        checkWandererArmor(p, rewards);
-        checkHealthRegen(p, rewards);
-        checkTravellerArmor(p, rewards);
-        checkAdventurerArmor(p, rewards);
+        if (!p.hasPotionEffect(PotionEffectType.REGENERATION)) {
+            if (!plugin.getSkillManager().getPlayerRewards(p).getReward("Exploring", "HealthRegen").isApplied()) return;
+            p.addPotionEffect(new PotionEffect(PotionEffectType.REGENERATION, Integer.MAX_VALUE, 0, true, false));
+        }
     }
 
     @EventHandler
     public void onFallDamage(EntityDamageEvent e) {
-        if (!(e.getEntity() instanceof Player)) return;
-        Player p = (Player) e.getEntity();
-        PlayerRewards rewards = plugin.getPlayerRewards(p);
+        if (!(e.getEntity() instanceof Player p)) return;
+        PlayerRewards rewards = plugin.getSkillManager().getPlayerRewards(p);
         if (e.getCause() != EntityDamageEvent.DamageCause.FALL) return;
-        if (isAdventurerArmor(p.getInventory()) && (rewards.getReward("Exploring", "AdventurerArmor").isApplied() || p.hasPermission("survivalskills.op"))) {
+        if (ArmorListener.playersWearingAdventurerArmor.contains(p.getUniqueId())) {
             e.setCancelled(true);
             return;
         }
-        if (isJumpingBoots(p)) {
+        if (ArmorListener.playersWearingJumpingBoots.contains(p.getUniqueId())) {
             e.setCancelled(true);
             return;
         }
@@ -140,15 +139,41 @@ public class ExploringSkill implements Listener {
     }
 
     @EventHandler
-    public void onPlayerInteract(PlayerInteractEvent e) {
+    public void useCaveFinder(PlayerInteractEvent e) {
         Player p = e.getPlayer();
         if (e.getHand() != EquipmentSlot.HAND) return;
         PlayerInventory inv = p.getInventory();
         if (!ItemStackGenerator.isCustomItem(inv.getItemInMainHand(), 6)
                 && !ItemStackGenerator.isCustomItem(inv.getItemInOffHand(), 6)) return;
-        if (!plugin.getPlayerRewards(p).getReward("Exploring", "CaveFinder").isApplied()) return;
+        if (!plugin.getSkillManager().getPlayerRewards(p).getReward("Exploring", "CaveFinder").isApplied()) {
+            p.sendRawMessage(ChatColor.RED + "You must be exploring level" + ChatColor.AQUA
+                    + plugin.getSkillManager().getDefaultPlayerRewards().getReward("Exploring", "CaveFinder").getLevel());
+            p.playSound(p, Sound.ENTITY_ENDERMAN_TELEPORT, 1, 1);
+            return;
+        }
         CaveFinderAsync task = new CaveFinderAsync(p, plugin);
         task.runTaskAsynchronously(plugin);
+    }
+
+    @EventHandler
+    public void onItemHandChange(PlayerItemHeldEvent e) {
+        Player p = e.getPlayer();
+        ItemStack mainHand = p.getInventory().getItem(e.getNewSlot());
+        if (!ItemStackGenerator.isCustomItem(mainHand, 32)) {
+            activeMagnets.remove(p);
+            return;
+        }
+
+        if (activeMagnets.contains(p)) return;
+
+        if (!plugin.getSkillManager().getPlayerRewards(p).getReward("Exploring", "Magnet").isApplied()) {
+            p.sendRawMessage(ChatColor.RED + "You must be exploring level" + ChatColor.AQUA
+                    + plugin.getSkillManager().getDefaultPlayerRewards().getReward("Exploring", "Magnet").getLevel());
+            p.playSound(p, Sound.ENTITY_ENDERMAN_TELEPORT, 1, 1);
+            return;
+        }
+        activeMagnets.add(p);
+        new Magnet(p).runTaskTimer(plugin, 0, 5);
     }
 
     public int getPlayerSteps(UUID uuid) {
@@ -166,77 +191,18 @@ public class ExploringSkill implements Listener {
     }
 
     public void setSwimSpeed(Player p) {
-        double speed = plugin.getPlayerRewards(p).getSwimSpeed();
+        double speed = plugin.getSkillManager().getPlayerRewards(p).getSwimSpeed();
         if (speed == 0) return;
-        speed *= 0.2;
-        Vector v = p.getLocation().getDirection();
-        p.setVelocity(v.multiply(speed));
-    }
 
-    public void giveJumpPotionEffect(Player p) {
-        p.addPotionEffect(new PotionEffect(PotionEffectType.JUMP_BOOST, 100, 2, false, false, true));
-    }
-
-    public boolean isWandererArmor(PlayerInventory inv) {
-        if (!ItemStackGenerator.isCustomItem(inv.getBoots(), 5)) return false;
-        if (!ItemStackGenerator.isCustomItem(inv.getLeggings(), 5)) return false;
-        if (!ItemStackGenerator.isCustomItem(inv.getChestplate(), 5)) return false;
-        return ItemStackGenerator.isCustomItem(inv.getHelmet(), 5);
-    }
-
-    public boolean isTravellerArmor(PlayerInventory inv) {
-        if (!ItemStackGenerator.isCustomItem(inv.getBoots(), 7)) return false;
-        if (!ItemStackGenerator.isCustomItem(inv.getLeggings(), 7)) return false;
-        if (!ItemStackGenerator.isCustomItem(inv.getChestplate(), 7)) return false;
-        return ItemStackGenerator.isCustomItem(inv.getHelmet(), 7);
-    }
-
-    public boolean isAdventurerArmor(PlayerInventory inv) {
-        if (!ItemStackGenerator.isCustomItem(inv.getBoots(), 8)) return false;
-        if (!ItemStackGenerator.isCustomItem(inv.getLeggings(), 8)) return false;
-        if (!ItemStackGenerator.isCustomItem(inv.getChestplate(), 8)) return false;
-        return ItemStackGenerator.isCustomItem(inv.getHelmet(), 8);
-    }
-
-    public boolean isJumpingBoots(Player p) {
-        if (!plugin.getPlayerRewards(p).getReward("Exploring", "JumpingBoots").isApplied() && !p.hasPermission("survivalskills.op")) return false;
-        return ItemStackGenerator.isCustomItem(p.getInventory().getBoots(), 4);
-    }
-
-    public void giveSpeedPotionEffect(Player p, int level) {
-        p.addPotionEffect(new PotionEffect(PotionEffectType.SPEED, 100, level, false, false, true));
-    }
-
-    public void giveRegenPotionEffect(Player p) {
-        p.addPotionEffect(new PotionEffect(PotionEffectType.REGENERATION, 100, 0, false, false, false));
-    }
-
-    public void checkJumpBoots(Player p, PlayerRewards rewards) {
-        if (!rewards.getReward("Exploring", "JumpingBoots").isApplied() && !p.hasPermission("survivalskills.op")) return;
-        if (ItemStackGenerator.isCustomItem(p.getInventory().getBoots(), 4)) giveJumpPotionEffect(p);
-    }
-
-    public void checkWandererArmor(Player p, PlayerRewards rewards) {
-        if (!rewards.getReward("Exploring", "WandererArmor").isApplied() && !p.hasPermission("survivalskills.op")) return;
-        if (isWandererArmor(p.getInventory())) giveSpeedPotionEffect(p, 0);
-    }
-
-    public void checkTravellerArmor(Player p, PlayerRewards rewards) {
-        if (!rewards.getReward("Exploring", "TravellerArmor").isApplied() && !p.hasPermission("survivalskills.op")) return;
-        if (isTravellerArmor(p.getInventory())) giveSpeedPotionEffect(p, 1);
-    }
-
-    public void checkAdventurerArmor(Player p, PlayerRewards rewards) {
-        if (!rewards.getReward("Exploring", "AdventurerArmor").isApplied() && !p.hasPermission("survivalskills.op")) return;
-        if (isAdventurerArmor(p.getInventory())) giveSpeedPotionEffect(p, 2);
-    }
-
-    public void checkHealthRegen(Player p, PlayerRewards rewards) {
-        if (!rewards.getReward("Exploring", "HealthRegen").isApplied()) return;
-        giveRegenPotionEffect(p);
-    }
-
-    public void setXp(double xp) {
-        this.xp = xp;
+        if (ArmorListener.playersWearingGillArmor.contains(p.getUniqueId())) {
+            speed *= 0.6;
+            Vector v = p.getLocation().getDirection();
+            p.setVelocity(v.multiply(speed));
+        }
+        else {
+            speed *= 0.2;
+            Vector v = p.getLocation().getDirection();
+            p.setVelocity(v.multiply(speed));
+        }
     }
 }
